force-app/main/default/objects/Case/fields/AcudioCita__c.field-meta.xml
<CustomField>
    <fullName>AcudioCita__c</fullName>
    <description>Se indica si el contacto acudió  a la cita que tenia planificada</description>
    <label>Acudió a la cita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>