force-app/main/default/objects/Case/fields/AsesorCitaNoAsiste__c.field-meta.xml
<CustomField>
    <fullName>AsesorCitaNoAsiste__c</fullName>
    <description>Asesor de la cita a la cual el cliente no asistió</description>
    <label>Asesor de la cita</label>
    <length>255</length>
    <type>Text</type>
</CustomField>