force-app/main/default/objects/Case/fields/AsuntoFormula__c.field-meta.xml
<CustomField>
    <fullName>AsuntoFormula__c</fullName>
    <formula>Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asunto</label>
    <type>Text</type>
</CustomField>