force-app/main/default/objects/Case/fields/CalculoArriaga__c.field-meta.xml
<CustomField>
    <fullName>CalculoArriaga__c</fullName>
    <description>En los casos de financiero el estado en el que se encuentra el cálculo que realiza arriaga</description>
    <label>Cálculo Arriaga</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solicitado</fullName>
            </value>
            <value>
                <fullName>Realizado</fullName>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>No aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>