force-app/main/default/objects/Case/fields/Canal__c.field-meta.xml
<CustomField>
    <fullName>Canal__c</fullName>
    <description>Canal por el que se ha creado el caso</description>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LLamada</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Visita</fullName>
            </value>
            <value>
                <fullName>RR.SS/Web</fullName>
            </value>
            <value>
                <fullName>Carta</fullName>
            </value>
            <value>
                <fullName>Formulario</fullName>
            </value>
            <value>
                <fullName>Caso abierto por otro departamento Arriaga</fullName>
            </value>
            <value>
                <fullName>Minerva</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>