force-app/main/default/objects/Case/fields/CantidadPerdida__c.field-meta.xml
<CustomField>
    <fullName>CantidadPerdida__c</fullName>
    <description>El departamento financiero debe ser informado de los pagos a realizar al cliente</description>
    <label>Cantidad Perdida</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>