force-app/main/default/objects/Case/fields/Categorizacion__c.field-meta.xml
<CustomField>
    <fullName>Categorizacion__c</fullName>
    <description>Categoría para la clasificación del caso</description>
    <label>Categorización</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AUDIENCIA PREVIA - CAMBIO DE FECHA</fullName>
            </value>
            <value>
                <fullName>AUDIENCIA PREVIA - PRIMER SEÑALAMIENTO</fullName>
            </value>
            <value>
                <fullName>AUDIENCIA PREVIA - SUSPENSIÓN</fullName>
            </value>
            <value>
                <fullName>FALTA INFORMACIÓN CLIENTE</fullName>
            </value>
            <value>
                <fullName>HOJA DE RECLAMACION</fullName>
            </value>
            <value>
                <fullName>INCIDENCIA EJECUCIONES</fullName>
            </value>
            <value>
                <fullName>INCIDENCIA GENERAL</fullName>
            </value>
            <value>
                <fullName>INCIDENCIA PROCESAL</fullName>
            </value>
            <value>
                <fullName>INCIDENCIA PRODUCCION</fullName>
            </value>
            <value>
                <fullName>INFO AP</fullName>
            </value>
            <value>
                <fullName>INFO APELACIÓN</fullName>
            </value>
            <value>
                <fullName>INFO COMUNICACIÓN INGRESO CUENTA CLIENTE</fullName>
            </value>
            <value>
                <fullName>INFO CONSIGNACIÓN</fullName>
            </value>
            <value>
                <fullName>INFO CONSULTA/RECEPCIÓN DOCUMENTACIÓN</fullName>
            </value>
            <value>
                <fullName>INFO COSTAS</fullName>
            </value>
            <value>
                <fullName>INFO COSTES/ HOJA DE ENCARGO</fullName>
            </value>
            <value>
                <fullName>INFO DAT</fullName>
            </value>
            <value>
                <fullName>INFO DOCU</fullName>
            </value>
            <value>
                <fullName>INFO EJECUCIÓN</fullName>
            </value>
            <value>
                <fullName>INFO ENVÍO DOCUMENTACIÓN</fullName>
            </value>
            <value>
                <fullName>INFO FACTURACIÓN</fullName>
            </value>
            <value>
                <fullName>INFO FASE MP</fullName>
            </value>
            <value>
                <fullName>INFO GENERAL EXPEDIENTE</fullName>
            </value>
            <value>
                <fullName>INFO JUICIO</fullName>
            </value>
            <value>
                <fullName>INFO LIQUIDACIÓN</fullName>
            </value>
            <value>
                <fullName>INFO MP</fullName>
            </value>
            <value>
                <fullName>INFO OTROS</fullName>
            </value>
            <value>
                <fullName>INFO PLAZOS</fullName>
            </value>
            <value>
                <fullName>INFO RRSS</fullName>
            </value>
            <value>
                <fullName>INFO SELLADO JUZGADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>