force-app/main/default/objects/Case/fields/Clasificacion__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion__c</fullName>
    <description>Se clasifica el caso según el motivo indicado</description>
    <label>Clasificación</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ausencia de objeto reclamable</fullName>
            </value>
            <value>
                <fullName>No viable</fullName>
            </value>
            <value>
                <fullName>Acción caducada/prescrita</fullName>
            </value>
            <value>
                <fullName>Ausencia de expediente</fullName>
            </value>
            <value>
                <fullName>Demanda sin presentar</fullName>
            </value>
            <value>
                <fullName>Inactividad</fullName>
            </value>
            <value>
                <fullName>Desistimiento incorrecto</fullName>
            </value>
            <value>
                <fullName>Gowex</fullName>
            </value>
            <value>
                <fullName>Falta de gestión</fullName>
            </value>
            <value>
                <fullName>Servicio no contratado</fullName>
            </value>
            <value>
                <fullName>Presentación de demanda no consentida</fullName>
            </value>
            <value>
                <fullName>Desistimiento no tramitado</fullName>
            </value>
            <value>
                <fullName>Expediente duplicado</fullName>
            </value>
            <value>
                <fullName>Cliente duplicado</fullName>
            </value>
            <value>
                <fullName>Documentación subida errónea</fullName>
            </value>
            <value>
                <fullName>Error de datos</fullName>
            </value>
            <value>
                <fullName>Error demandante</fullName>
            </value>
            <value>
                <fullName>Error demandado</fullName>
            </value>
            <value>
                <fullName>Error competencia</fullName>
            </value>
            <value>
                <fullName>Error cuantía</fullName>
            </value>
            <value>
                <fullName>Errores de referencia</fullName>
            </value>
            <value>
                <fullName>Planteamiento jurídico incorrecto</fullName>
            </value>
            <value>
                <fullName>Documental incorrecta</fullName>
            </value>
            <value>
                <fullName>Error acción ejercitada</fullName>
            </value>
            <value>
                <fullName>Presentación tardía</fullName>
            </value>
            <value>
                <fullName>Lexnet</fullName>
            </value>
            <value>
                <fullName>Litispendencia</fullName>
            </value>
            <value>
                <fullName>Incomparecencia</fullName>
            </value>
            <value>
                <fullName>Falta de personación</fullName>
            </value>
            <value>
                <fullName>Escrito omitido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>