force-app/main/default/objects/Case/fields/ConceptoFactura__c.field-meta.xml
<CustomField>
    <fullName>ConceptoFactura__c</fullName>
    <description>Concepto de la factura</description>
    <label>Concepto factura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>