force-app/main/default/objects/Case/fields/CondicionCierre__c.field-meta.xml
<CustomField>
    <fullName>CondicionCierre__c</fullName>
    <description>Indica si la resolución conlleva o no factura</description>
    <inlineHelpText>Indica si la resolución conlleva o no factura</inlineHelpText>
    <label>Condición de cierre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Con factura</fullName>
            </value>
            <value>
                <fullName>Sin factura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>