force-app/main/default/objects/Case/fields/ContactoComunidad__c.field-meta.xml
<CustomField>
    <fullName>ContactoComunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para realizar la colaboración de la comunidad y así los casos que son internos no mostrarlos a los usuarios de la comunidad ya que la colaboración de la comunidad funciona con este campo</description>
    <label>Contacto Comunidad</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>