force-app/main/default/objects/Case/fields/CorrespondeFactura__c.field-meta.xml
<CustomField>
    <fullName>CorrespondeFactura__c</fullName>
    <description>Para los casos financieros se indica si quieren factura</description>
    <label>Corresponde factura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SiNo</valueSetName>
    </valueSet>
</CustomField>