force-app/main/default/objects/Case/fields/Criticidad__c.field-meta.xml
<CustomField>
    <fullName>Criticidad__c</fullName>
    <description>El grado de criticidad del caso del tipo riesgo</description>
    <label>Criticidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Menor de valor franquicia</fullName>
            </value>
            <value>
                <fullName>Valor de franquicia</fullName>
            </value>
            <value>
                <fullName>Superior franquicia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>