force-app/main/default/objects/Case/fields/CuantiaPropuesta__c.field-meta.xml
<CustomField>
    <fullName>CuantiaPropuesta__c</fullName>
    <description>En los casos del tipo financiero se indica el importe de la propuesta</description>
    <label>Cuantia propuesta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>