force-app/main/default/objects/Case/fields/DepartamentoArriaga__c.field-meta.xml
<CustomField>
    <fullName>DepartamentoArriaga__c</fullName>
    <description>Se indica el departamento que ha tenido como canal de entrada el caso</description>
    <label>Departamento Arriaga</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Origin</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASESORIA COMERCIAL</fullName>
            </value>
            <value>
                <fullName>CALL CENTER</fullName>
            </value>
            <value>
                <fullName>COBRO</fullName>
            </value>
            <value>
                <fullName>EJECUCIONES</fullName>
            </value>
            <value>
                <fullName>FINANCIERO</fullName>
            </value>
            <value>
                <fullName>FRONT - ATC</fullName>
            </value>
            <value>
                <fullName>MARKETING</fullName>
            </value>
            <value>
                <fullName>PROCESAL</fullName>
            </value>
            <value>
                <fullName>PRODUCCIÓN</fullName>
            </value>
            <value>
                <fullName>RECOBRO</fullName>
            </value>
            <value>
                <fullName>RESOLUCIONES</fullName>
            </value>
            <value>
                <fullName>RESPONSABLES</fullName>
            </value>
            <value>
                <fullName>RIESGOS</fullName>
            </value>
            <value>
                <fullName>SSJJ</fullName>
            </value>
            <value>
                <fullName>OTROS</fullName>
            </value>
            <value>
                <fullName>OION</fullName>
                <isActive>false</isActive>
                <label>OION</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>