force-app/main/default/objects/Case/fields/Encuesta_satisfaccion_ya_enviada__c.field-meta.xml
<CustomField>
    <fullName>Encuesta_satisfaccion_ya_enviada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Encuesta satisfaccion ya enviada</label>
    <type>Checkbox</type>
</CustomField>