force-app/main/default/objects/Case/fields/EntidadAvisa__c.field-meta.xml
<CustomField>
    <fullName>EntidadAvisa__c</fullName>
    <description>Entidad que avisa de la incidencia</description>
    <inlineHelpText>Entidad que avisa de la incidencia</inlineHelpText>
    <label>Entidad que avisa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fraile Mena</fullName>
            </value>
            <value>
                <fullName>OION</fullName>
            </value>
            <value>
                <fullName>Arriaga</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>