force-app/main/default/objects/Case/fields/EnvioFacturaAA__c.field-meta.xml
<CustomField>
    <fullName>EnvioFacturaAA__c</fullName>
    <description>Envío factura AA</description>
    <label>Envío factura AA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Envialia</fullName>
            </value>
            <value>
                <fullName>Correo certificado</fullName>
            </value>
            <value>
                <fullName>Burofax</fullName>
            </value>
            <value>
                <fullName>Oficina</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>