force-app/main/default/objects/Case/fields/EnvioFacturaFM__c.field-meta.xml
<CustomField>
    <fullName>EnvioFacturaFM__c</fullName>
    <description>Envío factura FM</description>
    <label>Envío factura FM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enviada</fullName>
            </value>
            <value>
                <fullName>No corresponde</fullName>
            </value>
            <value>
                <fullName>Plazo 48hs</fullName>
            </value>
            <value>
                <fullName>Incidencia</fullName>
            </value>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>