force-app/main/default/objects/Case/fields/EstadoParteSegColegio__c.field-meta.xml
<CustomField>
    <fullName>EstadoParteSegColegio__c</fullName>
    <description>Estado del parte del seguro Colegio</description>
    <label>Estado Parte Seguro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>