force-app/main/default/objects/Case/fields/EstadoParteSegEmpresa__c.field-meta.xml
<CustomField>
    <fullName>EstadoParteSegEmpresa__c</fullName>
    <description>Estado del parte del seguro Empresa</description>
    <label>Estado Parte Seguro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>