force-app/main/default/objects/Case/fields/EstadoPF__c.field-meta.xml
<CustomField>
    <fullName>EstadoPF__c</fullName>
    <description>Para los casos del tipo financiero se indica el estado del pago final</description>
    <label>Estado PI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Devuelta</fullName>
            </value>
            <value>
                <fullName>Retornable</fullName>
            </value>
            <value>
                <fullName>No retornable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>