force-app/main/default/objects/Case/fields/EstimacionFranquiciaArriaga__c.field-meta.xml
<CustomField>
    <fullName>EstimacionFranquiciaArriaga__c</fullName>
    <description>estimación de la franquicia de Arriaga</description>
    <label>Estimación franquicia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>