force-app/main/default/objects/Case/fields/EstimacionPolizaColegio__c.field-meta.xml
<CustomField>
    <fullName>EstimacionPolizaColegio__c</fullName>
    <description>estimación de la cobertura de póliza para Colegio en el tipo de registro Siniestro</description>
    <label>Estimación cobertura póliza Colegio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>