force-app/main/default/objects/Case/fields/EstimacionPolizaEmpresa__c.field-meta.xml
<CustomField>
    <fullName>EstimacionPolizaEmpresa__c</fullName>
    <description>estimación de la cobertura de póliza para la Empresa</description>
    <label>Estimación cobertura póliza</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>