force-app/main/default/objects/Case/fields/Expediente__c.field-meta.xml
<CustomField>
    <fullName>Expediente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Expediente asociado al caso por el que se ha abierto el caso</description>
    <label>Expediente</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El expediente no corresponde con el cliente</errorMessage>
        <filterItems>
            <field>$Source.ContactId</field>
            <operation>equals</operation>
            <valueField>Contract.Account.PersonContactId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>