force-app/main/default/objects/Case/fields/Fase__c.field-meta.xml
<CustomField>
    <fullName>Fase__c</fullName>
    <description>Para los casos de financiero se necesita indicar la fase en la que se encuentra el caso</description>
    <label>Fase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Producción</fullName>
            </value>
            <value>
                <fullName>Judicial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>