force-app/main/default/objects/Case/fields/FechaCitaNoAsiste__c.field-meta.xml
<CustomField>
    <fullName>FechaCitaNoAsiste__c</fullName>
    <description>Fecha de la cita a la cual el cliente no asistió</description>
    <label>Fecha de la Cita</label>
    <type>DateTime</type>
</CustomField>