force-app/main/default/objects/Case/fields/FechaCobro__c.field-meta.xml
<CustomField>
    <fullName>FechaCobro__c</fullName>
    <description>Fecha de cobro</description>
    <label>Fecha cobro</label>
    <type>Date</type>
</CustomField>