force-app/main/default/objects/Case/fields/FechaConfirmacionCita__c.field-meta.xml
<CustomField>
    <fullName>FechaConfirmacionCita__c</fullName>
    <description>FEcha en la que se realiza la llamada para la confirmación de la cita</description>
    <label>Fecha confirmación cita</label>
    <type>Date</type>
</CustomField>