force-app/main/default/objects/Case/fields/FechaFactura__c.field-meta.xml
<CustomField>
    <fullName>FechaFactura__c</fullName>
    <description>Fecha de la factura</description>
    <label>Fecha factura</label>
    <type>Date</type>
</CustomField>