force-app/main/default/objects/Case/fields/FechaHoraRellamada__c.field-meta.xml
<CustomField>
    <fullName>FechaHoraRellamada__c</fullName>
    <description>Hora a la que se tiene que volver a llamar al contacto para confirmar la cita</description>
    <label>Fecha/Hora de rellamada</label>
    <type>DateTime</type>
</CustomField>