force-app/main/default/objects/Case/fields/FechaLimite__c.field-meta.xml
<CustomField>
    <fullName>FechaLimite__c</fullName>
    <description>Fecha límite para la gestión del caso</description>
    <inlineHelpText>Fecha límite para la gestión del caso</inlineHelpText>
    <label>Fecha límite</label>
    <type>Date</type>
</CustomField>