force-app/main/default/objects/Case/fields/FechaPagoAbogado__c.field-meta.xml
<CustomField>
    <fullName>FechaPagoAbogado__c</fullName>
    <description>Fecha del pago del abogado</description>
    <label>Fecha pago abogado externo</label>
    <type>Date</type>
</CustomField>