force-app/main/default/objects/Case/fields/FechaPagoArr__c.field-meta.xml
<CustomField>
    <fullName>FechaPagoArr__c</fullName>
    <description>Fecha del pago Arriaga</description>
    <label>Fecha pago arriaga</label>
    <type>Date</type>
</CustomField>