force-app/main/default/objects/Case/fields/FechaPagoCli__c.field-meta.xml
<CustomField>
    <fullName>FechaPagoCli__c</fullName>
    <description>Fecha del pago del cliente</description>
    <label>Fecha pago cliente</label>
    <type>Date</type>
</CustomField>