force-app/main/default/objects/Case/fields/FechaPagoProcu__c.field-meta.xml
<CustomField>
    <fullName>FechaPagoProcu__c</fullName>
    <description>Fecha del pago del procurador</description>
    <label>Fecha pago procurador</label>
    <type>Date</type>
</CustomField>