force-app/main/default/objects/Case/fields/FechaPagoSegEmpresa__c.field-meta.xml
<CustomField>
    <fullName>FechaPagoSegEmpresa__c</fullName>
    <description>Fecha del pago realizado</description>
    <label>Fecha pago realizado seguro</label>
    <type>Date</type>
</CustomField>