force-app/main/default/objects/Case/fields/FechaParteColegio__c.field-meta.xml
<CustomField>
    <fullName>FechaParteColegio__c</fullName>
    <description>Fecha del parte del colegio</description>
    <label>Fecha Parte</label>
    <type>Date</type>
</CustomField>