force-app/main/default/objects/Case/fields/FechaParteEmpresa__c.field-meta.xml
<CustomField>
    <fullName>FechaParteEmpresa__c</fullName>
    <description>Fecha del parte del Empresa</description>
    <label>Fecha Parte</label>
    <type>Date</type>
</CustomField>