force-app/main/default/objects/Case/fields/FechaReplicaEmpresa__c.field-meta.xml
<CustomField>
    <fullName>FechaReplicaEmpresa__c</fullName>
    <description>Fecha de la réplica de la empresa</description>
    <label>Fecha réplica</label>
    <type>Date</type>
</CustomField>