force-app/main/default/objects/Case/fields/FechaResolucionSegEmpresa__c.field-meta.xml
<CustomField>
    <fullName>FechaResolucionSegEmpresa__c</fullName>
    <description>Fecha de resolución del seguro</description>
    <label>Fecha resolución cobertura seguro</label>
    <type>Date</type>
</CustomField>