force-app/main/default/objects/Case/fields/FechaVencimiento__c.field-meta.xml
<CustomField>
    <fullName>FechaVencimiento__c</fullName>
    <description>45 días desde la fecha de factura</description>
    <formula>FechaFactura__c + 45</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>45 días desde la fecha de factura</inlineHelpText>
    <label>Fecha de vencimiento</label>
    <type>Date</type>
</CustomField>