force-app/main/default/objects/Case/fields/ImpactoEconomico__c.field-meta.xml
<CustomField>
    <fullName>ImpactoEconomico__c</fullName>
    <defaultValue>false</defaultValue>
    <description>El usuario que atiende el caso detecta un perjuicio económico</description>
    <label>Impacto económico</label>
    <type>Checkbox</type>
</CustomField>