force-app/main/default/objects/Case/fields/ImporteAbogado__c.field-meta.xml
<CustomField>
    <fullName>ImporteAbogado__c</fullName>
    <description>Importe que paga el abogado</description>
    <label>Pago abogado externo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>