force-app/main/default/objects/Case/fields/ImporteArriaga__c.field-meta.xml
<CustomField>
    <fullName>ImporteArriaga__c</fullName>
    <description>Importe que paga Arriaga</description>
    <label>Pago arriaga</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>