force-app/main/default/objects/Case/fields/ImporteCliente__c.field-meta.xml
<CustomField>
    <fullName>ImporteCliente__c</fullName>
    <description>Importe que paga el cliente</description>
    <label>Pago cliente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>