force-app/main/default/objects/Case/fields/ImporteCobro__c.field-meta.xml
<CustomField>
    <fullName>ImporteCobro__c</fullName>
    <description>Importe cobrado</description>
    <label>Importe cobro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>