force-app/main/default/objects/Case/fields/ImporteDemanda__c.field-meta.xml
<CustomField>
    <fullName>ImporteDemanda__c</fullName>
    <description>En los casos de riesgo campo para indicar el importe que conlleva la demanda</description>
    <label>Importe demanda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>