force-app/main/default/objects/Case/fields/ImporteFactura__c.field-meta.xml
<CustomField>
    <fullName>ImporteFactura__c</fullName>
    <description>Importe que aparece en la factura</description>
    <label>Importe factura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>