force-app/main/default/objects/Case/fields/ImporteHonorarios__c.field-meta.xml
<CustomField>
    <fullName>ImporteHonorarios__c</fullName>
    <description>En los casos financieros se indica el importe que se tiene que pagar por los honorarios</description>
    <label>Importe honorarios</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>