force-app/main/default/objects/Case/fields/ImporteIncidencia__c.field-meta.xml
<CustomField>
    <fullName>ImporteIncidencia__c</fullName>
    <description>Importe correspondiente a la resolución de un caso del tipo Incidencia</description>
    <label>Importe de la incidencia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>