force-app/main/default/objects/Case/fields/ImportePagoArriaga__c.field-meta.xml
<CustomField>
    <fullName>ImportePagoArriaga__c</fullName>
    <description>Importe relacionado con el pago de Arriaga</description>
    <label>Importe pago Arriaga</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>