force-app/main/default/objects/Case/fields/ImportePagoColegio__c.field-meta.xml
<CustomField>
    <fullName>ImportePagoColegio__c</fullName>
    <description>Importe del pago realizado</description>
    <label>Cuantía pago realizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>