force-app/main/default/objects/Case/fields/ImporteProcurador__c.field-meta.xml
<CustomField>
    <fullName>ImporteProcurador__c</fullName>
    <description>Importe que paga el procurador</description>
    <label>Pago procurador</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>