force-app/main/default/objects/Case/fields/ImporteReal__c.field-meta.xml
<CustomField>
    <fullName>ImporteReal__c</fullName>
    <description>Importe real de la incidencia</description>
    <label>Importe real</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>