force-app/main/default/objects/Case/fields/ImporteSeguroColegio__c.field-meta.xml
<CustomField>
    <fullName>ImporteSeguroColegio__c</fullName>
    <description>Importe del seguro de colegio</description>
    <label>Importe seguro colegio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>