force-app/main/default/objects/Case/fields/ImporteSeguroEmpresa__c.field-meta.xml
<CustomField>
    <fullName>ImporteSeguroEmpresa__c</fullName>
    <description>Importe del seguro de la empresa</description>
    <label>Importe seguro empresa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>