force-app/main/default/objects/Case/fields/Interno__c.field-meta.xml
<CustomField>
    <fullName>Interno__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para indicar que es un caso interno y que no se tiene que mostrar al contacto de la comunidad</description>
    <label>Publicar a cliente</label>
    <type>Checkbox</type>
</CustomField>