force-app/main/default/objects/Case/fields/Juzgado__c.field-meta.xml
<CustomField>
    <fullName>Juzgado__c</fullName>
    <description>En los casos de financiero del tipo venia se indica el juzgado</description>
    <label>Juzgado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>