force-app/main/default/objects/Case/fields/MailAbogado__c.field-meta.xml
<CustomField>
    <fullName>MailAbogado__c</fullName>
    <description>En los casos de financiero del tipo venia se indica el correo electrónico del abogado de la parte contraria</description>
    <label>Mail del abogado</label>
    <type>Email</type>
</CustomField>